# MethaneKit

./: .codecov.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .gitpod.dockerfile  .gitpod.yml  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Folder.DotSettings  README.md  SECURITY.md  azure-pipelines.yml  sonar-project.properties
Apps/: CMakeLists.txt  README.md
Apps/01-HelloTriangle/: CMakeLists.txt  HelloTriangleApp.cpp  README.md
Apps/02-HelloCube/: CMakeLists.txt  HelloCubeApp.cpp  README.md
Apps/02-HelloCube/Shaders/: HelloCube.hlsl  HelloCubeUniforms.h
Apps/03-TexturedCube/: CMakeLists.txt  README.md  TexturedCubeApp.cpp  TexturedCubeApp.h
Apps/03-TexturedCube/Shaders/: TexturedCube.hlsl  TexturedCubeUniforms.h
Apps/04-ShadowCube/: CMakeLists.txt  README.md  ShadowCubeApp.cpp  ShadowCubeApp.h
Apps/04-ShadowCube/Shaders/: ShadowCube.hlsl  ShadowCubeUniforms.h
Apps/05-Typography/: CMakeLists.txt  README.md  TypographyApp.cpp  TypographyApp.h  TypographyAppController.cpp  TypographyAppController.h
Apps/06-CubeMapArray/: CMakeLists.txt  CubeMapArrayApp.cpp  CubeMapArrayApp.h  README.md
Apps/06-CubeMapArray/Shaders/: CubeMapArray.hlsl
Apps/07-ParallelRendering/: CMakeLists.txt  ParallelRenderingApp.cpp  ParallelRenderingApp.h  ParallelRenderingAppController.cpp  ParallelRenderingAppController.h  README.md
Apps/07-ParallelRendering/Shaders/: ParallelRendering.hlsl  ParallelRenderingUniforms.h
Apps/08-ConsoleCompute/: CMakeLists.txt  ConsoleApp.cpp  ConsoleApp.h  ConsoleCompute.cpp  ConsoleComputeApp.cpp  ConsoleComputeApp.h  README.md
Apps/08-ConsoleCompute/Shaders/: GameOfLife.hlsl  GameOfLifeRules.h
Apps/Common/: CMakeLists.txt
Apps/Common/Shaders/: Primitives.hlsl
Apps/Samples/: CMakeLists.txt  README.md
Apps/Samples/Asteroids/: Asteroid.cpp  Asteroid.h  AsteroidsApp.cpp  AsteroidsApp.h  AsteroidsAppController.cpp  AsteroidsAppController.h  AsteroidsArray.cpp  AsteroidsArray.h  CMakeLists.txt  MultiOctavePerlinNoise.cpp  MultiOctavePerlinNoise.h  Planet.cpp  Planet.h  README.md
Apps/Samples/Asteroids/Shaders/: Planet.cfg  (+8 more)
Apps/Tutorials/: CMakeLists.txt  README.md
Apps/Tutorials/01-HelloTriangle/: CMakeLists.txt  HelloTriangleApp.cpp  HelloTriangleApp.h  HelloTriangleAppSimple.cpp  README.md
Apps/Tutorials/02-HelloCube/: CMakeLists.txt  HelloCubeApp.cpp  HelloCubeApp.h  README.md
Apps/Tutorials/02-HelloCubeUniforms/: CMakeLists.txt  HelloCubeUniformsApp.cpp
Apps/Tutorials/02-TexturedCube/: CMakeLists.txt  README.md  TexturedCubeApp.cpp  TexturedCubeApp.h
Apps/Tutorials/03-ShadowCube/: CMakeLists.txt  README.md  ShadowCubeApp.cpp  ShadowCubeApp.h
Apps/Tutorials/03-TexturedCube/: CMakeLists.txt  README.md  TexturedCubeApp.cpp  TexturedCubeApp.h
Apps/Tutorials/04-ShadowCube/: CMakeLists.txt  README.md  ShadowCubeApp.cpp  ShadowCubeApp.h
Apps/Tutorials/04-TextRender/: CMakeLists.txt  TextRenderApp.cpp  TextRenderApp.h
Apps/Tutorials/04-Typography/: CMakeLists.txt  README.md  TypographyApp.cpp  TypographyApp.h  TypographyAppController.cpp  TypographyAppController.h
Apps/Tutorials/05-Typography/: CMakeLists.txt  README.md  TypographyApp.cpp  TypographyApp.h  TypographyAppController.cpp
Apps/Tutorials/06-CubeMapArray/: CMakeLists.txt  CubeMapArrayApp.cpp  CubeMapArrayApp.h  README.md  TextureLabeler.cpp  TextureLabeler.h
Apps/Tutorials/07-ParallelRendering/: CMakeLists.txt  ParallelRenderingApp.cpp  ParallelRenderingApp.h  ParallelRenderingAppController.cpp  ParallelRenderingAppController.h  README.md
Modules/Common/Instrumentation/: CMakeLists.txt  README.md
Modules/Common/PrecompiledHeaders/: CMakeLists.txt
Modules/Common/Primitives/: CMakeLists.txt
Modules/Data/Animation/: CMakeLists.txt
Modules/Data/Events/: CMakeLists.txt
Modules/Data/Primitives/: CMakeLists.txt
Modules/Data/Provider/: CMakeLists.txt
Modules/Data/RangeSet/: CMakeLists.txt
Modules/Data/Types/: CMakeLists.txt
Modules/Kit/: CMakeLists.txt
Tests/: CMakeLists.txt  README.md
Tests/CMake/: CatchDiscoverAndRunTests.cmake
Tests/CatchHelpers/: CMakeLists.txt
Tests/Coverage/: CMakeLists.txt
Tests/Coverage/GCov/: CMakeLists.txt
Tests/Data/: CMakeLists.txt  README.md
Tests/Data/Events/: CMakeLists.txt  EventWrappers.hpp  EventsBenchmark.cpp  EventsTest.cpp  Main.cpp  README.md
Tests/Data/RangeSet/: CMakeLists.txt  Main.cpp  README.md  RangeSetTest.cpp  RangeTest.cpp
Tests/Data/Types/: CMakeLists.txt  EnumMaskTest.cpp  PointTest.cpp  README.md  RawVectorTest.cpp  RectSizeTest.cpp  RectTest.cpp  TestHelpers.hpp  VectorTest.cpp
Tests/Graphics/: CMakeLists.txt  README.md
Tests/Graphics/Camera/: ArcBallCameraTest.cpp  CMakeLists.txt  Main.cpp  README.md
Tests/Graphics/Mesh/: CMakeLists.txt  CubeMeshTest.cpp  IcosahedronMeshTest.cpp  MeshTestHelpers.hpp  QuadMeshTest.cpp  README.md  SimpleCubeMeshTest.cpp  SphereMeshTest.cpp  UberMeshTest.cpp
Tests/Graphics/RHI/: BufferSetTest.cpp  BufferTest.cpp  CMakeLists.txt  CommandKitTest.cpp  CommandListDebugGroupTest.cpp  CommandListSetTest.cpp  CommandQueueTest.cpp  ComputeCommandListTest.cpp  ComputeContextTest.cpp  ComputeStateTest.cpp  DeviceTest.cpp  FenceTest.cpp  ObjectRegistryTest.cpp  ParallelRenderCommandListTest.cpp  ProgramBindingsTest.cpp  ProgramTest.cpp  README.md  RenderCommandListsTest.cpp  RenderContextTest.cpp  RenderPassTest.cpp  RenderPatternTest.cpp  RenderStateSettings.hpp  RenderStateTest.cpp  ResourceBarriersTest.cpp  RhiSettings.hpp  RhiTestHelpers.hpp  SamplerTest.cpp  ShaderTest.cpp  SystemTest.cpp  TextureTest.cpp  TransferCommandListTest.cpp  ViewStateTest.cpp
Tests/Graphics/Types/: CMakeLists.txt  ColorTest.cpp  Main.cpp  README.md  VolumeSizeTest.cpp  VolumeTest.cpp
Tests/Platform/: README.md
Tests/Platform/Input/: CMakeLists.txt  KeyboardTest.cpp  Main.cpp  MouseTest.cpp  README.md
Tests/UserInterface/: CMakeLists.txt  README.md
Tests/UserInterface/Types/: CMakeLists.txt  ContextTest.cpp  FakePlatformApp.hpp  FakeRenderContext.hpp  Main.cpp  README.md  UnitTypeCatchHelpers.hpp  UnitTypesTest.cpp
(+1781 files in other folders)
