add_subdirectory(Common)
add_subdirectory(01-HelloTriangle)
add_subdirectory(02-HelloCube)
add_subdirectory(03-TexturedCube)
add_subdirectory(04-ShadowCube)
add_subdirectory(05-Typography)
add_subdirectory(06-CubeMapArray)
add_subdirectory(07-ParallelRendering)
if(NOT APPLE_IOS) # Console applications are not supported on iOS
    add_subdirectory(08-ConsoleCompute)
endif()